# AutoJiraBacklog

AutoJiraBacklog/: README.md
AutoJiraBacklog/Docs/: Vision.txt  requirements.txt
AutoJiraBacklog/src/AutoJiraBacklog/config/: agents.yaml
ux-agile-crew/: report.md  requirements.txt
ux-agile-crew/Docs/: backlog.csv
ux-agile-crew/src/ux-agile-crew/: main.py
ux-agile-crew/src/ux-agile-crew/tools/: custom_tool.py
ux_agile_crew/: backlog.csv  pyproject.toml
ux_agile_crew/Docs/: backlog.csv  requirements.txt
ux_agile_crew/src/ux_agile_crew/: crew.py
ux_agile_crew/src/ux_agile_crew/config/: tasks.yaml
