[project]
name = "ux_agile_crew"
version = "0.1.0"
description = "ux_agile_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ux_agile_crew = "ux_agile_crew.main:run"
run_crew = "ux_agile_crew.main:run"
train = "ux_agile_crew.main:train"
replay = "ux_agile_crew.main:replay"
test = "ux_agile_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
